# yt_dlp_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/yt_dlp_api/: main.py
tests/: test_api.py
