[project]
name = "yt-dlp-api"
version = "0.1.0"
description = "FastAPI service exposing yt-dlp functionality"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "yt-dlp>=2025.9.26",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "basedpyright",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["main.py"]
reportMissingImports = "warning"
venvPath = "."
venv = ".venv"
