[project]
name = "yt-dlp-api"
version = "0.1.0"
description = "FastAPI service exposing yt-dlp functionality"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncache>=0.3.1",
    "fastapi[standard]",
    "yt-dlp>=2025.9.26",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["main.py"]
reportMissingImports = "warning"
venvPath = "."
venv = ".venv"

[tool.pyprojectx]
main = ["ruff", "basedpyright"]

[tool.pyprojectx.aliases]
dev = "uv run fastapi dev src/yt_dlp_api/main.py"
test = "uv run pytest src/yt_dlp_api/main.py"
format = "ruff format src/"
lint = "ruff check src/"
typecheck = "basedpyright src/"

